html: autocomplete disabled

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="options">
         <span class="options__label" id="label-year">Annually</span>
         <div class="toggle">
-          <input class="toggle__checkbox" data-toggle type="checkbox" id="toggle" />
+          <input class="toggle__checkbox" data-toggle type="checkbox" id="toggle" autocomplete="off" />
           <label class="toggle__custom" data-label-toggle for="toggle" aria-labelledby="label-year"></label>
         </div>
         <span class="options__label" id="label-month">Monthly</span>
