html: button changed to a anchor tag

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
             <li class="card__item">2 Users Allowed</li>
             <li class="card__item">Send up to 3 GB</li>
           </ul>
-          <button class="card__button">
+          <a href="#" class="card__button">
             <span>Learn More</span>
-          </button>
+          </a>
         </section>
 
         <section class="card card--blue">
@@ -45,9 +45,9 @@
             <li class="card__item">5 Users Allowed</li>
             <li class="card__item">Send up to 10 GB</li>
           </ul>
-          <button class="card__button card__button--white">
+          <a href="#" class="card__button card__button--white">
             <span>Learn More</span>
-          </button>
+          </a>
         </section>
 
         <section class="card">
@@ -58,9 +58,9 @@
             <li class="card__item">10 Users Allowed</li>
             <li class="card__item">Send up to 20 GB</li>
           </ul>
-          <button class="card__button">
+          <a href="#" class="card__button">
             <span>Learn More</span>
-          </button>
+          </a>
         </section>
       </div>
     </main>
